# pulseengine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  pom.xml
.github/: SECURITY.md
.github/workflows/: ci.yml  finalization-smoke-v2.yml  finalization-smoke.yml  nightly-performance.yml  release-gated-publish.yml  release-qualification.yml  soak-qualification.yml  staging-canary.yml  transport-qualification.yml
cpp/: CMakeLists.txt
cpp/bench/: order_book_insert_bench.cpp
cpp/src/: native_abi.hpp  native_order_book.hpp  pulseengine_native.cpp
docs/: ARCHITECTURE.md  CHANGELOG_ADDENDUM_2026-04-08.md  CI_TROUBLESHOOTING.md  FINAL_CLOSEOUT.md  HFT_FINAL_STATUS.md  OPERATIONS_READINESS.md  RELEASE_PUBLISHING.md  RELEASE_QUALIFICATION.md  RUNBOOK.md  SECURITY_REPORTING.md
ops/grafana/dashboards/: pulseengine-overview.json
ops/grafana/provisioning/dashboards/: dashboards.yml
ops/prometheus/: alerts.yml  prometheus.with-alerts.yml  prometheus.yml
scripts/perf/: run_native_soak_ci.sh  run_native_soak_ci_v2.sh  validate_canary.py  validate_canary_v2.py  validate_perf.py  validate_release_pack.py  validate_soak.py  validate_transport.py
src/main/java/io/pulseengine/app/: AeronIpcDemo.java  AeronUdpMulticastDemo.java  AllocationHarness.java  BinaryFeedDemo.java  CoordinatedRecoveryTool.java  JournalRecoveryTool.java  JournalReplayDemo.java  LatencyHarness.java  MatchingBackend.java  NativeDisruptorDemo.java  NativeParitySoakTool.java  NativeParitySoakToolV2.java  NativePipelineDemo.java  PipelineDemo.java
src/main/java/io/pulseengine/core/: BookOrder.java  MatchEventSink.java  OrderBook.java  OrderRequest.java  OrderType.java  PriceLevel.java  RejectCode.java  Side.java  SmpPolicy.java  TimeInForce.java
src/main/java/io/pulseengine/jni/: NativeMatchingEngine.java  NativeOrderBinaryLayout.java  NativeOrderBook.java
src/main/java/io/pulseengine/md/: BinaryMdDecoder.java  BinaryMdPublisher.java  MdMessageSink.java  MdMessageType.java  TopOfBookView.java
src/main/resources/sbe/: market-data-schema.xml
(+36 files in other folders)
